<resources>
    <string name="KEY_ABOUT">KEY_ABOUT</string>
    <string name="KEY_ANTI_BANDING">KEY_AB</string>
    <string name="KEY_AOVX">KEY_AOVX</string>
    <string name="KEY_AOVY">KEY_AOVY</string>
    <string name="KEY_AOV_GAIN">KEY_AOV_GAIN</string>
    <string name="KEY_AUTO_EXPOSURE_LOCK">KEY_AE_LOCK</string>
    <string name="KEY_AUTO_WHITE_BALANCE_LOCK">KEY_AWB_LOCK</string>
    <string name="KEY_CALCSEAM_PIXNUM">KEY_CALCSEAM_PIXNUM</string>
    <string name="KEY_CAMERA_ID">KEY_CAMERA_ID</string>
    <string name="KEY_CAPTURE_MODE">KEY_CAPTURE_MODE</string>
    <string name="KEY_CAPTURE_SIZE">KEY_CAMERA_SIZE</string>
    <string name="KEY_COLOR_CORRECTION_MODE">KEY_COLOR_CORRECTION_MODE</string>
    <string name="KEY_DEFORM">KEY_DEFORM</string>
    <string name="KEY_DISTORTION_K1">KEY_DISTORTION_K1</string>
    <string name="KEY_DISTORTION_K2">KEY_DISTORTION_K2</string>
    <string name="KEY_DISTORTION_K3">KEY_DISTORTION_K3</string>
    <string name="KEY_DISTORTION_K4">KEY_DISTORTION_K4</string>
    <string name="KEY_DRAW_THRESHOLD">KEY_DRAW_THRESHOLD</string>
    <string name="KEY_EDGE_MODE">KEY_EDGE_MODE</string>
    <string name="KEY_FOCUS_MODE">KEY_FOCUS_MODE</string>
    <string name="KEY_GPS">KEY_GPS</string>
    <string name="KEY_INPUT_MOVIE_FPS">KEY_INPUT_MOVIE_FPS</string>
    <string name="KEY_LUMINANCE_CORRECTION">KEY_LUMINANCE_CORRECTION</string>
    <string name="KEY_MOTION_DETECTION_MODE">KEY_MOTION_DETECTION_MODE</string>
    <string name="KEY_NOISE_REDUCTION_MODE">KEY_NOISE_REDUCTION_MODE</string>
    <string name="KEY_NR_AUTO">KEY_NR_AUTO</string>
    <string name="KEY_NR_STRENGTH">KEY_NR_STRENGTH</string>
    <string name="KEY_PROJECTION_MODE">KEY_PROJECTION_MODE</string>
    <string name="KEY_ROTATION_RATIO">KEY_ROTATION_RATIO</string>
    <string name="KEY_SAVE_INPUT_IMAGES">KEY_SAVE_IMG</string>
    <string name="KEY_SEAMSEARCH_RATIO">KEY_SEAMSEARCH_RATIO</string>
    <string name="KEY_SENSOR_MODE">KEY_SENSOR_MODE</string>
    <string name="KEY_SHADING_MODE">KEY_SHADING_MODE</string>
    <string name="KEY_SHRINK_RATIO">KEY_SHRINK_RATIO</string>
    <string name="KEY_TONEMAP_MODE">KEY_TONEMAP_MODE</string>
    <string name="KEY_UI_CONTROL_MODE">KEY_UI_CONTROL_MODE</string>
    <string name="KEY_UNSHARP_STRENGTH">KEY_UNSHARP_STRENGTH</string>
    <string name="KEY_USE_CAMERA2">KEY_USE_CAMERA2</string>
    <string name="KEY_USE_GRAVITY_SENSOR">KEY_USE_GRAVITY_SENSOR</string>
    <string name="KEY_ZROTATION_COEFF">KEY_ZROTATION_COEFF</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">PanoramaSOMC</string>
    <string name="cam_strings_accessibility_close_txt">Close</string>
    <string name="cam_strings_accessibility_mode_slider_bokeh_txt">Bokeh</string>
    <string name="cam_strings_accessibility_mode_slider_photo_txt">Photo</string>
    <string name="cam_strings_accessibility_mode_slider_slow_motion_txt">Slow motion</string>
    <string name="cam_strings_accessibility_mode_slider_video_txt">Video</string>
    <string name="cam_strings_accessibility_panorama_txt">Panorama</string>
    <string name="cam_strings_accessibility_quick_setting_menu_txt">Settings</string>
    <string name="cam_strings_accessibility_recent_photos_txt">A stack of recent photos</string>
    <string name="cam_strings_accessibility_setting_heading_txt">Heading</string>
    <string name="cam_strings_application_name_panorama_txt">Panorama</string>
    <string name="cam_strings_capture_bokeh_tab_label">Bokeh</string>
    <string name="cam_strings_capture_panorama_tab_label">Panorama</string>
    <string name="cam_strings_capture_panorama_tab_label_short">Panorama</string>
    <string name="cam_strings_capture_photo_tab_label">Photo</string>
    <string name="cam_strings_capture_slow_motion_tab_label_short">Slow</string>
    <string name="cam_strings_capture_video_tab_label">Video</string>
    <string name="cam_strings_description_panorama_txt">Take a panoramic photo by sweeping your device</string>
    <string name="cam_strings_panorama_accessibility_back_main_txt">Back</string>
    <string name="cam_strings_panorama_advanced_setting_geo_tag_both_off_txt">To save locations, you have to enable GPS and/or wireless networks. Enable now?</string>
    <string name="cam_strings_panorama_advanced_setting_geo_tag_title_txt">Save location</string>
    <string name="cam_strings_panorama_camera_sound_txt">Sound</string>
    <string name="cam_strings_panorama_cancel_txt">Cancel</string>
    <string name="cam_strings_panorama_change_storage_to_sd_txt">SD card inserted. Change default data storage to SD card?</string>
    <string name="cam_strings_panorama_change_txt">Change</string>
    <string name="cam_strings_panorama_dialog_high_temp_title_txt">Note</string>
    <string name="cam_strings_panorama_direction_invalid_txt">Wrong direction</string>
    <string name="cam_strings_panorama_do_not_show_again_txt">Do not show again</string>
    <string name="cam_strings_panorama_error_device_not_available_txt">The camera may be in use by another application. Please close the other application and try again.</string>
    <string name="cam_strings_panorama_error_fatal_txt">Unknown error.</string>
    <string name="cam_strings_panorama_error_high_temp_info_txt">The device temperature is rising. If it continues to rise, the app will close automatically.</string>
    <string name="cam_strings_panorama_error_high_temp_shutting_down_txt">Camera will now turn off temporarily to cool down.</string>
    <string name="cam_strings_panorama_error_launch_app_txt">"Recording in progress in another app. Couldn't record."</string>
    <string name="cam_strings_panorama_error_memory_full_txt">Memory full. Delete some files from SD card.</string>
    <string name="cam_strings_panorama_error_memory_ims_full_txt">Memory full. Delete some files from the memory or change the default data storage.</string>
    <string name="cam_strings_panorama_error_memory_ims_unavailable_txt">Memory unavailable</string>
    <string name="cam_strings_panorama_error_memory_title_txt">Memory error</string>
    <string name="cam_strings_panorama_error_memory_unavailable_txt">SD card unavailable</string>
    <string name="cam_strings_panorama_error_title_txt">Error</string>
    <string name="cam_strings_panorama_geotagging_txt">Save location</string>
    <string name="cam_strings_panorama_guide_direction_txt">Move the device slowly in the direction of the arrows</string>
    <string name="cam_strings_panorama_guide_too_fast_txt">Move this device more slowly</string>
    <string name="cam_strings_panorama_no_txt">No</string>
    <string name="cam_strings_panorama_ok_txt">OK</string>
    <string name="cam_strings_panorama_permgroupdesc_thermalmitigation_message_txt">Allow the app to control the system for stable capturing, depending on the temperature in the device.</string>
    <string name="cam_strings_panorama_permgrouplab_thermalmitigation_txt">control the system</string>
    <string name="cam_strings_panorama_remember_geotag_title_txt">Save location?</string>
    <string name="cam_strings_panorama_remember_geotag_txt">Tag your photos and videos with the locations where they are taken. You can change this setting later from Save location in the Camera settings.</string>
    <string name="cam_strings_panorama_runtime_permission_continue_button_txt">APP INFO</string>
    <string name="cam_strings_panorama_runtime_permission_dialog1_message_txt">%1$s requires the following permission(s)</string>
    <string name="cam_strings_panorama_runtime_permission_dialog1_title_txt">%1$s permission</string>
    <string name="cam_strings_panorama_runtime_permission_dialog2_message1_txt">The app requires the following permission(s) to perform this action.</string>
    <string name="cam_strings_panorama_runtime_permission_dialog2_message2_txt">To grant permissions, go to App info > Permissions.</string>
    <string name="cam_strings_panorama_runtime_permission_dialog2_title_txt">Could not continue</string>
    <string name="cam_strings_panorama_runtime_permission_rationale_camera_txt">To take photos and videos</string>
    <string name="cam_strings_panorama_runtime_permission_rationale_location_txt">To retrieve location</string>
    <string name="cam_strings_panorama_runtime_permission_rationale_storage_read_write_txt">To read and save photos and videos</string>
    <string name="cam_strings_panorama_runtime_permission_rationale_storage_txt">To save photos and videos</string>
    <string name="cam_strings_panorama_save_destination_ims_txt">Internal storage</string>
    <string name="cam_strings_panorama_save_destination_sd_txt">SD card</string>
    <string name="cam_strings_panorama_save_destination_title_txt">Data storage</string>
    <string name="cam_strings_panorama_save_destination_txt">Data storage</string>
    <string name="cam_strings_panorama_screen_pinned_txt">Screen is pinned</string>
    <string name="panoramagp2_BTN_LBL_AUTO">Auto</string>
    <string name="panoramagp2_BTN_LBL_MANUAL">Manual</string>
    <string name="panoramagp2_BTN_LBL_TV">Tv</string>
    <string name="panoramagp2_LBL_EV">+/-</string>
    <string name="panoramagp2_LBL_FPS">FPS</string>
    <string name="panoramagp2_LBL_ISO">ISO</string>
    <string name="panoramagp2_LBL_SS">SS</string>
</resources>