<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:orientation="horizontal" android:id="@id/camera2_mode_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:id="@id/camera2_auto_radio" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/panoramagp2_BTN_LBL_AUTO" android:layout_weight="1.0" />
        <RadioButton android:id="@id/camera2_tv_radio" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/panoramagp2_BTN_LBL_TV" android:layout_weight="1.0" />
        <RadioButton android:id="@id/camera2_manual_radio" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/panoramagp2_BTN_LBL_MANUAL" android:layout_weight="1.0" />
    </RadioGroup>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/panoramagp2_LBL_EV" android:layout_weight="1.0" />
        <TextView android:gravity="end" android:layout_gravity="center_vertical" android:id="@id/ae_compensation_value_text_view" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" android:paddingEnd="8.0dip" />
        <SeekBar android:id="@id/ae_compensation_seek_bar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="6.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/panoramagp2_LBL_ISO" android:layout_weight="1.0" />
        <TextView android:gravity="end" android:layout_gravity="center_vertical" android:id="@id/iso_value_text_view" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" android:paddingEnd="8.0dip" />
        <SeekBar android:id="@id/iso_seek_bar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="6.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/panoramagp2_LBL_SS" android:layout_weight="1.0" />
        <TextView android:gravity="end" android:layout_gravity="center_vertical" android:id="@id/shutter_speed_text_view" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" android:paddingEnd="8.0dip" />
        <SeekBar android:id="@id/shutter_speed_seek_bar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="6.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/panoramagp2_LBL_FPS" android:layout_weight="1.0" />
        <TextView android:gravity="end" android:layout_gravity="center_vertical" android:id="@id/fps_text_view" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" android:paddingEnd="8.0dip" />
        <SeekBar android:id="@id/fps_seek_bar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="6.0" />
        <SeekBar android:id="@id/auto_fps_seek_bar" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="6.0" />
    </LinearLayout>
</LinearLayout>
